@@ -21,9 +21,11 @@ const UserPageContainer = ({
         switch (tabIndex) {
             case 0: {
                 changePage(pageConstants.CREATE_USER);
+                updateSession(pageConstants.CREATE_USER, user);
             };
             default: {
                 changePage(pageConstants.USERS);
+                updateSession(pageConstants.USERS, user);
             }
         }
     }
