@@ -2,6 +2,11 @@ PiCenter Changelog
 
 
 1.0.00a
+
+11/24/2019
+Build 100112
+    Add Create User Page.
+
 11/23/2019
 Build 100111
     Wrap login input in form.
